unpackaged/objects/AffiliatedHospital__c.object
<CustomObject>
    <fields>
        <fullName>ContractInfo_AmountLimit__c</fullName>
        <label>(契約情報) 限度額</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_Amount__c</fullName>
        <label>(契約情報) 保証金金額</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_AutomaticRenewal__c</fullName>
        <label>(契約情報) 自動更新</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>○</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>不明</fullName>
                </value>
                <value>
                    <fullName>記載なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractInfo_ContractAgreement__c</fullName>
        <label>(契約情報) 提携病院契約申請書</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>○</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractInfo_ContractTerm__c</fullName>
        <label>(契約情報) 契約期間</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_CreditTerm__c</fullName>
        <label>(契約情報) 与信期間</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_DateFrom__c</fullName>
        <label>(契約情報) 契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractInfo_DateTo__c</fullName>
        <label>(契約情報) 契約満期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractInfo_DocumentTitle__c</fullName>
        <label>(契約情報) 契約名称</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_PenalCharge__c</fullName>
        <label>(契約情報) 罰金</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_Post__c</fullName>
        <label>(契約情報) 役職</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractInfo_Representative__c</fullName>
        <label>(契約情報) 代表者</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Area__c</fullName>
        <label>(契約情報) エリア</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Busho__c</fullName>
        <label>（契約情報）担当部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <label>(契約情報) 病院区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>総合</fullName>
                </value>
                <value>
                    <fullName>専門</fullName>
                </value>
                <value>
                    <fullName>クリニック</fullName>
                </value>
                <value>
                    <fullName>歯科</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Country__c</fullName>
        <label>(契約情報) 国</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>マカオ</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>オーストラリア</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>イギリス</fullName>
                </value>
                <value>
                    <fullName>ドイツ</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>オランダ</fullName>
                </value>
                <value>
                    <fullName>ロシア</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>ブラジル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_DocKeep__c</fullName>
        <label>(契約情報) 契約保管</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>原本</fullName>
                </value>
                <value>
                    <fullName>コピー</fullName>
                </value>
                <value>
                    <fullName>保管なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Email__c</fullName>
        <label>（契約情報）担当者Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_HospitalAddress__c</fullName>
        <label>(契約情報) 住所</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_HospitalName__c</fullName>
        <label>(契約情報) 病院名</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_HospitalPopularName__c</fullName>
        <label>(契約情報) 病院名(通称)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_HospitalTel__c</fullName>
        <label>(契約情報) 電話番号(代表)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_MailHaishin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（契約情報）メール配信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>(契約情報) 医療機関/契約先</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_NumberOfCopies__c</fullName>
        <label>(契約情報) 部数</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Region__c</fullName>
        <label>(契約情報) 州／県</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Shimei__c</fullName>
        <label>（契約情報）担当者名</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>契約種類</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>通常キャッシュレス</fullName>
                </value>
                <value>
                    <fullName>Business Referral Agreement</fullName>
                </value>
                <value>
                    <fullName>Affiliated Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Zone__c</fullName>
        <label>(契約情報) 地区</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Sort_Order__c</fullName>
        <formula>Case(Contract_Country__c,
&quot;中国&quot;,10,
&quot;香港&quot;,20,
&quot;マカオ&quot;,30,
&quot;シンガポール&quot;,40,
&quot;マレーシア&quot;,50,
&quot;タイ&quot;,60,
&quot;ミャンマー&quot;,70,
&quot;カンボジア&quot;,80,
&quot;ベトナム&quot;,90,
&quot;インド&quot;,100,
&quot;スリランカ&quot;,110,
&quot;インドネシア&quot;,120,
&quot;フィリピン&quot;,130,
&quot;メキシコ&quot;,200,
&quot;台湾&quot;,300,
&quot;韓国&quot;,310,
&quot;ラオス&quot;,320,
&quot;バングラデシュ&quot;,330,
&quot;オーストラリア&quot;,400,
&quot;イギリス&quot;,500,
&quot;ドイツ&quot;,510,
&quot;ロシア&quot;,600,
&quot;UAE&quot;,700,
900)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（表示順）国番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>要確認事項備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>契約区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>契約済</fullName>
                </value>
                <value>
                    <fullName>契約進行中</fullName>
                </value>
                <value>
                    <fullName>契約なし（キャッシュレス可）</fullName>
                </value>
                <value>
                    <fullName>紹介のみ</fullName>
                </value>
                <value>
                    <fullName>契約解除</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>(ファイリング) 枝番</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Country__c</fullName>
        <label>(ファイリング) 国コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_No__c</fullName>
        <label>(ファイリング) 番号</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ハンドブックに地図を掲載する場合に、チェックします。</inlineHelpText>
        <label>(HP_ハンドブック掲載) ハンドブック地図</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HospitalInfo_24HoursRemarks__c</fullName>
        <label>(病院情報) 24時間対応(注意文)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HospitalInfo_24Hours__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>※24時間対応の病院は、「受診場所」が24時間対応とは限りません。</fullName>
                </value>
                <value>
                    <fullName>※病院のHPで開院時間をご確認ください。</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalInfo_24Hours__c</fullName>
        <label>(病院情報) 24時間対応</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24時間</fullName>
                </value>
                <value>
                    <fullName>昼間./場合により夜間</fullName>
                </value>
                <value>
                    <fullName>昼間のみ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalInfo_HospitalStaffLanguage__c</fullName>
        <label>(病院情報) 病院スタッフ言語</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>病院スタッフ日本語可</fullName>
                </value>
                <value>
                    <fullName>病院スタッフ英語可</fullName>
                </value>
                <value>
                    <fullName>病院スタッフ日英可</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalInfo_MedicalDepartment__c</fullName>
        <label>(病院情報) 診療科目</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalInfo_SurgeryHours__c</fullName>
        <label>(病院情報) 診察時間</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HospitalInfo_VisitTo__c</fullName>
        <label>(病院情報) 受診場所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Address__c</fullName>
        <label>病院住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Category_Order__c</fullName>
        <formula>case(Contract_Category__c,
&quot;総合&quot;,1,
&quot;専門&quot;,2,
&quot;クリニック&quot;,3,
&quot;歯科&quot;,4,
9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（表示順）病院区分番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Sort_Order__c</fullName>
        <label>（表示順）病院番号</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Tel__c</fullName>
        <label>病院電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Longitude_Latitude__c</fullName>
        <label>病院場所 緯度経度</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_HPDeleteRequestedDate__c</fullName>
        <label>(HP_ハンドブック掲載) HP削除依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_HPPostRequestedDate__c</fullName>
        <label>(HP_ハンドブック掲載) HP掲載依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_HP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>掲載=チェックあり</inlineHelpText>
        <label>(HP_ハンドブック掲載) HP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Handbook__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>掲載=チェックあり</inlineHelpText>
        <label>(HP_ハンドブック掲載) ハンドブック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_PostSort__c</fullName>
        <label>(HP_ハンドブック掲載) 掲載順番</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Sort_Order__c</fullName>
        <label>（表示順）州／県番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WBStaff_StationedArea__c</fullName>
        <inlineHelpText>常駐地区=○
非常駐地区=×</inlineHelpText>
        <label>(WBスタッフ) 常駐地区</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>○</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WBStaff_StationedHospital__c</fullName>
        <label>(WBスタッフ) 病院常駐有無</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>常駐（平日/一部土日）</fullName>
                </value>
                <value>
                    <fullName>常駐（平日のみ）</fullName>
                </value>
                <value>
                    <fullName>ご依頼時派遣</fullName>
                </value>
                <value>
                    <fullName>予約手配のみ</fullName>
                </value>
                <value>
                    <fullName>予約手配のみ（病院日本語可）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WBStaff_StationedTime__c</fullName>
        <label>(WBスタッフ) 病院常駐時間</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WB_AgreementTemplate__c</fullName>
        <label>(WB情報) WB様式契約書</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>○</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WB_Company__c</fullName>
        <label>(WB情報) WB契約会社</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WB_LocalCompany__c</fullName>
        <label>(WB情報) WB現地会社</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WB_LocalHandle__c</fullName>
        <label>(WB情報) WB担当</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WB_LocalRepresentative__c</fullName>
        <label>(WB情報) WB現地代表者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WB_Remarks__c</fullName>
        <label>(WB情報) 備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WB_Representative__c</fullName>
        <label>(WB情報) WB代表者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Sort_Order__c</fullName>
        <label>（表示順）地区番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appDeletedDate__c</fullName>
        <label>（アプリ）削除日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appPostingDate__c</fullName>
        <label>（アプリ）掲載日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>confirm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>確認事項ありの場合=チェックあり</inlineHelpText>
        <label>要確認事項</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>f_AppDeleteTarget__c</fullName>
        <formula>if ( OR( 
AND( Not ISBLANK(Post_HPDeleteRequestedDate__c), ISBLANK(appDeletedDate__c)) 
, AND( Not ISBLANK(Post_HPDeleteRequestedDate__c), Post_HPPostRequestedDate__c &gt; appDeletedDate__c) 
) 
, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f_AppDeleteTarget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>f_AppPostingTarget__c</fullName>
        <formula>if ( OR ( Post_HPPostRequestedDate__c &gt; appPostingDate__c, 
AND( AND(ISBLANK(appPostingDate__c), ISBLANK(appDeletedDate__c)) , NOT ISBLANK(Post_HPPostRequestedDate__c) ) 
) , true, false)

/*
if ( OR ( Post_HPPostRequestedDate__c &gt; appPostingDate__c, 
AND( ISBLANK(appPostingDate__c), NOT ISBLANK(Post_HPPostRequestedDate__c) ) 
) , true, false)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f_AppPostingTarget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>f_orderingcondition__c</fullName>
        <formula>TEXT(Contract_Country__c) + Contract_Region__c + Contract_Zone__c + TEXT(Contract_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f_orderingcondition</label>
        <type>Text</type>
    </fields>
    <label>提携病院</label>
    <listViews>
        <fullName>X100</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Contract_Country__c</columns>
        <columns>Contract_Area__c</columns>
        <columns>Contract_Zone__c</columns>
        <columns>Contract_Category__c</columns>
        <columns>Contract_HospitalName__c</columns>
        <columns>HospitalInfo_MedicalDepartment__c</columns>
        <columns>Post_HP__c</columns>
        <columns>Post_Handbook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Country__c</field>
            <operation>notEqual</operation>
            <value>中国,香港,マカオ</value>
        </filters>
        <filters>
            <field>Field2__c</field>
            <operation>notEqual</operation>
            <value>契約解除</value>
        </filters>
        <label>100_All_Contract</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713085</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X40_Vietnam</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Contract_Area__c</columns>
        <columns>Contract_Zone__c</columns>
        <columns>Contract_Category__c</columns>
        <columns>Contract_HospitalName__c</columns>
        <columns>HospitalInfo_MedicalDepartment__c</columns>
        <columns>Post_HP__c</columns>
        <columns>Post_Handbook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Country__c</field>
            <operation>equals</operation>
            <value>ベトナム</value>
        </filters>
        <label>40_Vietnam</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713085</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X50_India</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Contract_Area__c</columns>
        <columns>Contract_Zone__c</columns>
        <columns>Contract_Category__c</columns>
        <columns>Contract_HospitalName__c</columns>
        <columns>HospitalInfo_MedicalDepartment__c</columns>
        <columns>Post_HP__c</columns>
        <columns>Post_Handbook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Country__c</field>
            <operation>equals</operation>
            <value>インド</value>
        </filters>
        <label>50_India</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713085</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Contract_Country__c</columns>
        <columns>Contract_Area__c</columns>
        <columns>Contract_Zone__c</columns>
        <columns>Contract_Category__c</columns>
        <columns>Contract_HospitalName__c</columns>
        <columns>HospitalInfo_MedicalDepartment__c</columns>
        <columns>Contract_HospitalPopularName__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713081</role>
            <role>DeveloperName70583713085</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>hongkong</fullName>
        <columns>NAME</columns>
        <columns>Contract_Country__c</columns>
        <columns>Contract_Area__c</columns>
        <columns>Contract_Zone__c</columns>
        <columns>Contract_Category__c</columns>
        <columns>Contract_HospitalName__c</columns>
        <columns>HospitalInfo_MedicalDepartment__c</columns>
        <columns>Contract_HospitalPopularName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Zone__c</field>
            <operation>equals</operation>
            <value>香港</value>
        </filters>
        <label>すべて選択</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713085</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>HOSP-{00000}</displayFormat>
        <label>提携病院番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>